tests/Spire.Analyzers.Tests/SPIRE002/cases/Detect_EmptyBody_RecordStruct.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [EnforceInitialization] is applied to an empty record struct with no positional parameters (semicolon form).
[EnforceInitialization] //~ ERROR
public record struct EmptyRecordStruct;
